# letsearch

./: .gitignore  Cargo.toml  GEMINI.md  README.md  implementation_notes.md  implementation_reflections.md  notes.txt  notes2.txt  plan_of_attack.md  roadmap.md  state_of_union.md  test.py
.cargo/: config
.cursor/rules/: cli___commands.mdc  collection.mdc  collectionmanager.mdc  guide.mdc  hf_ops.mdc  modelmanager.mdc  onnxmodel___bertonnx.mdc  serve__actix_web_app_.mdc  vectorindex.mdc
.gemini/: settings.json
.github/workflows/: release.yml  rust.yml
benches/: benchmarks.rs  rag_instruct_benchmark_tester.jsonl
scripts/: export_to_onnx.py  requirements.txt  test.py
src/: chunker.rs  collection.rs  error.rs  hf_ops.rs  lib.rs  main.rs  pdf.rs  serve.rs  vector_index.rs
src/actors/: collection_actor.rs  collection_manager_actor.rs  mod.rs  model_actor.rs
src/collection/: collection.rs  collection_manager.rs  collection_type.rs  collection_utils.rs  mod.rs  vector_index.rs
src/model/: manager.rs  mod.rs  model_manager.rs  model_traits.rs  model_utils.rs
src/model/backends/: mod.rs
src/model/backends/gemini/: gemini_embedder.rs  mod.rs
src/model/backends/onnx/: bert_onnx.rs  encoder_onnx.rs  mod.rs
src/model/traits/: mod.rs  model_trait.rs  onnx_trait.rs
tests/: test_actix.rs
