[package]
name = "letsearch"
version = "0.1.9"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.93"
async-trait = "0.1.83"
clap = { version = "4.5.21", features = ["derive"] }
duckdb = { version = "1.1.1", features = ["bundled"] }
ort = {version = "2.0.0-rc.8", features = ["ndarray", "half",]}
half = {version = "2.1"}
ndarray = {version = "0.16"}
tokenizers = "0.20.3"
tokio = { version = "1.41.1", features = ["full"]}
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = "0.4.38"
rayon = "1.10.0"
usearch = "2.16.6"
hf-hub = "0.3.2"

[target.'cfg(windows)'.dependencies]
ort = { version = "2.0.0-rc.8", features = ["load-dynamic", "ndarray", "half"]}

[profile.release]
opt-level = 3
lto = true
